--- a/HTML/new-html/html-v3/assets/css/custom.css
+++ b/HTML/new-html/html-v3/assets/css/custom.css
@@ -301,7 +301,7 @@ input.errorfield[type=text], input.errorfield[type=email], input.errorfield[type
 
 .combo-textfld-select-fields .custom-select-wrapper .custom-select-trigger:after{ border-color:#000 transparent; }
 
-.form-white-box{ width:100%; min-height:60px; font-size:14px; background:#fff; color:#000; box-shadow: #e8e8e8 0px 0px 19px 0px; -webkit-box-shadow: #e8e8e8 0px 0px 19px 0px; display: -ms-flex;
+.form-white-box{ width:100%; min-height:60px; font-size:14px; background:#fff; color:#000;  display: -ms-flex;
                  display: -webkit-flex; display: -moz-flex; display: flex; align-items:center; justify-content: center; }
 
 .spin { transition: all ease 0.6s !important; }
@@ -3177,4 +3177,28 @@ input.errorfield[type=text], input.errorfield[type=email], input.errorfield[type
 
 .Sticky .StickyElementAfterScroll_withfixheight .calender-area{ margin-bottom: 10px; }
 /* sticky element on scroll css ended */
+
+
+
+
+.form-label{ font-size:20px; font-weight:700; }
+
+
+
+.producr-list-srch-area{ position: relative; background: #fff; box-shadow: #e8e8e8 0px 0px 19px 0px; -webkit-box-shadow: #e8e8e8 0px 0px 19px 0px; padding: 25px 30px; }
+
+.blue-custom-check-section{ padding:20px 0px; }
+
+
+label.blu-custm-chkbx{ width:auto; min-width:150px; position: relative; padding: 10px 12px; background: #05628133; font-family: 'Open Sans Condensed', sans-serif; color:#006381; border-radius: 30px; -webkit-border-radius: 30px; font-family: 'Open Sans Condensed', sans-serif; overflow: hidden; text-align: center; }
+
+label.blu-custm-chkbx input[type=checkbox]{ position: absolute; }
+
+label.blu-custm-chkbx .check-span{ position: absolute; top:0px; left:0px; /*background: #24b47e;*/ width:100%; height:100%; }
+
+label.blu-custm-chkbx .check-span:after{ content:''; width:100%; height:100%; position: absolute; top:0px; /*background: red;*/ z-index: 0; }
+
+label.blu-custm-chkbx input[type=checkbox]:checked + .check-span{ /*background: yellow;*/ position: relative; }
+
+label.blu-custm-chkbx input[type=checkbox]:checked
 
