--- a/HTML/html-v6/assets/css/custom.css
+++ b/HTML/html-v6/assets/css/custom.css
@@ -31,7 +31,7 @@ body, html {
 }
 
 body { 
-     font-family: 'Lato', sans-serif; height: 100%; background: #2d122d; font-size: 15px; line-height: 26px; font-weight: 400; -webkit-font-smoothing: antialiased; -moz-font-smoothing: antialiased; -ms-font-smoothing: antialiased; padding-top: 60px;
+     font-family: 'Lato', sans-serif; height: 100%; background: #210129; font-size: 15px; line-height: 26px; font-weight: 400; -webkit-font-smoothing: antialiased; -moz-font-smoothing: antialiased; -ms-font-smoothing: antialiased; padding-top: 60px;
 }
 
 body.on-side {  
@@ -129,11 +129,12 @@ header{
 }
 .hdrBtm{ 
      width:100%; min-height: 20px; padding:0px; float:left; position: relative;
-     background: #5d1c5c;
+     /*background: #5d1c5c;
      background: -moz-linear-gradient(top,  #5d1c5c 0%, #a21655 100%);
      background: -webkit-linear-gradient(top,  #5d1c5c 0%,#a21655 100%);
      background: linear-gradient(to bottom,  #5d1c5c 0%,#a21655 100%);
-     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5d1c5c', endColorstr='#a21655',GradientType=0 );
+     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5d1c5c', endColorstr='#a21655',GradientType=0 );*/
+     background: #270031;
 }
 .StickyElementAfterScroll{ 
      transition: -webkit-transform .3s ease; transition: transform .3s ease; transition: transform .3s ease,-webkit-transform .3s ease; 
@@ -162,7 +163,7 @@ header .col{
      content: ''; width:100%; height:100%; position: fixed; background:#000; opacity: 0.6; left:0px; top:0; transition: all ease-in-out 0.3s; -webkit-transition: all ease-in-out 0.3s; visibility: hidden;
 }
 .stickySideBar-inner{
-     width:100%; height:100%; position: absolute; top:0; left: 0; background: #fdc003; z-index: 1; padding:15px 20px;
+     width:100%; height:100%; position: absolute; top:0; left: 0; background: #fff8e2; z-index: 1; padding:15px 20px;
 }
 .stickySideBar.rightSideBar{
      left:auto; right:-300px;
@@ -219,6 +220,12 @@ ul.sidebarMenus li a{
 .home-body-section h2{
      font-size: 60px; color:#fff; font-weight:700; margin-bottom:30px;
 }
+.home-body-section h3{
+     font-size: 50px; color:#fff; font-weight:700; margin-bottom:30px;
+}
+.home-body-section h4{
+     font-size: 24px; color:#fff; font-weight:700;
+}
 .home-body-section p{
      font-size:24px; line-height: 36px; color:#77a3f3; margin-bottom: 60px;
 }
@@ -227,6 +234,59 @@ ul.sidebarMenus li a{
      width:100%; position: relative; padding:100px 0px;
 }
 
+
+.second-baner-block{
+     width:100%; position: relative; padding:60px 0px;
+}
+
+.third-baner-block{
+     width:100%; position: relative; padding:60px 0px 180px;
+}
+
+
+.rounded-box *{
+     transition: all ease-in-out 0.4s; -webkit-transition: all ease-in-out 0.4s;
+}
+.rounded-box{
+     width:100%; height:250px; position: relative; padding:30px; background: #1b2a3b; color:#fff; border-radius: 20px; -webkit-border-radius: 20px; margin-bottom: 30px; overflow: hidden; background-repeat: no-repeat; background-size: cover;
+}
+.rounded-box h4{
+     margin-bottom:30px;
+}
+.rounded-box p {
+    font-size: 18px; line-height: 26px; color:#fff;
+}
+.rounded-box .overlay-text{
+     position: absolute; left:0px; bottom:0px; width:100%; height:40%; padding:30px 25px;
+}
+.rounded-box i{
+     font-size: 50px; opacity: 0.5;
+}
+.rounded-box .overlay-text h4{
+     margin-bottom: 0px;
+}
+.rounded-box .overlay-text p{
+     opacity: 0; display: none;
+}
+.rounded-box:hover .overlay-text{
+     height: 100%; background: blue;
+}
+.rounded-box:hover .overlay-text h4{
+     margin-bottom: 30px;
+}
+.rounded-box:hover .overlay-text p{
+     opacity: 1; display: block;
+}
+
+.payment-logo{
+     display: inline-block; max-width: 100px;
+}
+.payment-logo img{
+     width:100%;
+}
+.payment-slider .slick-slide{
+     text-align: center;
+}
 
 .login-body-section{
      width:100%; min-height: 700px; position: relative; overflow: hidden; color:#fff; padding-top: 50px;
@@ -336,4 +396,56 @@ footer ul.footer-social li a {
 }
 footer ul.footer-social li:hover a { 
      background: #fdc800; color:#002147;
+}
+
+
+
+
+
+
+@media only screen and (max-width:767px){
+     .primary-menu{
+          position: absolute; right: 0px; top: 5px;
+     }
+     .header-logo {
+          margin-left: 30px;
+     }
+
+     .btn.btn-lg {
+          padding: 10px 35px;
+          font-size: 15px;
+     }
+
+     .bannerBlock {
+          padding: 20px 0px;
+     }
+     .bannerBlock .btn, .second-baner-block .btn{
+          margin-bottom: 30px;
+     }
+
+     .home-body-section h2, .home-body-section h3 {
+          font-size: 26px;
+     }
+     .home-body-section p {
+          font-size: 18px; line-height: 22px;
+     }
+
+     .second-baner-block {
+          padding: 15px 0px;
+     }
+
+     .third-baner-block {
+          padding: 60px 0px 60px;
+     }
+
+     footer .col-md-4{
+          margin-bottom: 30px;
+     }
+     footer .footer-bottom-section{
+          text-align: center;
+     }
+     footer .right-side-text{
+          text-align: center;
+     }
+
 }
