--- a/office/KAEC_BIK/HTML/kaec-bik/assets/css/custom.css
+++ b/office/KAEC_BIK/HTML/kaec-bik/assets/css/custom.css
@@ -1,3 +1,10 @@
+/*
+font-family: 'Bree Serif', serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
+*/
+
+
 * { padding: 0px; margin: 0px; outline: none; }
 
 /* placeholder and Selection css */
@@ -14,7 +21,7 @@
 /* body css property */
 body, html { height: 100%; -moz-osx-font-smoothing: grayscale; }
 
-body { font-family: 'Open Sans', sans-serif; line-height: 20px; -webkit-font-smoothing: antialiased; font-smoothing: antialiased; }
+body { font-family: 'Open Sans', sans-serif; font-size:18px; line-height: 20px; -webkit-font-smoothing: antialiased; }
 
 h1, h2, h3, h4, h5, h6 { margin-top: 0px; }
 
@@ -133,13 +140,133 @@ textarea { min-height: 125px; resize: none; }
 /* header css start */
 header{ padding: 32px 0px; background-color: #fff; }
 
+header .row.header-row{ align-items: center; }
+/* header css ended */
+
+
+/* header logo css start */ 
 .header-main-logo{ display: inline-block; }
 
 .header-main-logo img{ width:100%; max-width: 145px; }
-/* header css ended */
+/* header logo css ended */
 
-/* header main menu css start */
-.header-main-menu ul{ margin:0px; padding: 0px; }
 
-.header-main-menu ul li{ display: inline-block; font-size:18px; }
-/* header main menu css ended */
+/* header iconic info css start */
+.header-iconic-info{ display: inline-block; position: relative; color:#3e3e3e; line-height: 32px; padding: 0px 15px 0px 20px; font-weight:600; }
+
+.header-iconic-info:before{ content: ''; position: absolute; top:50%; transform: translateY(-50%); -webkit-transform: translateY(-50%); left:0px; width:2px; height:20px; background-color:#a2a2a2; }
+
+.header-iconic-info ul{ padding:0px; margin:0px -10px; }
+
+.header-iconic-info li{ display: inline-block; position: relative; margin: 0px 10px; }
+
+.header-iconic-info img{ max-width:25px; margin-right:10px; }
+
+.header-iconic-info li.only-icon img{ margin:0px; }
+
+.header-iconic-info a{ color:#3e3e3e; }
+
+.header-iconic-info i{ font-size:22px; }
+
+.header-iconic-info:first-child{ padding-left: 0px; }
+
+.header-iconic-info:first-child::before{ display: none; }
+
+.header-iconic-info:last-child{ padding-right: 0px; margin:0px; }
+/* header iconic info css ended */
+
+
+/* search filter row section css start */
+.search-filter-section{ position: relative; display: flex; align-items: center; min-height:120px; padding:28px 0px; background: url("../images/search-filter-bg.jpg") no-repeat top left; background-size: cover; clear: both; }
+
+.search-filter-wrap-area{ display: flex; align-items: center; flex-wrap: nowrap; margin:0px -6px; padding:12px 0px; }
+
+.search-filter-col{ flex: 1; position: relative; min-height: 20px; margin:0px 6px; background: red; }
+/* search filter row section css ended */
+
+
+
+.select-hidden {
+  /*display: none;
+  visibility: hidden;
+  padding-right: 10px;*/
+  
+  width:0px;
+  height:0px;
+  opacity: 1;
+}
+
+.select {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  font-size: 16px;
+  color: #fff;
+  width: 100%;
+  height: 40px;
+}
+
+.select-styled {
+  position: absolute;
+  top: 0px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #c0392b;
+  padding: 8px 15px;
+  -moz-transition: all 0.4s ease-in;
+  -o-transition: all 0.4s ease-in;
+  -webkit-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;
+}
+.select-styled:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border: 7px solid transparent;
+  border-color: #fff transparent transparent transparent;
+  position: absolute;
+  top: 16px;
+  right: 10px;
+}
+.select-styled:hover {
+  background-color: #b83729;
+}
+.select-styled:active, .select-styled.active {
+  background-color: #ab3326;
+}
+.select-styled:active:after, .select-styled.active:after {
+  top: 9px;
+  border-color: transparent transparent #fff transparent;
+}
+
+.select-options {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  left: 0;
+  z-index: 999;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: #ab3326;
+}
+.select-options li {
+  margin: 0;
+  padding: 12px 0;
+  text-indent: 15px;
+  border-top: 1px solid #962d22;
+  -moz-transition: all 0.15s ease-in;
+  -o-transition: all 0.15s ease-in;
+  -webkit-transition: all 0.15s ease-in;
+  transition: all 0.15s ease-in;
+}
+.select-options li:hover {
+  color: #c0392b;
+  background: #fff;
+}
+.select-options li[rel="hide"] {
+  display: none;
+}
+
