--- a/office/KAEC_BIK/HTML/kaec-bik/assets/css/custom.css
+++ b/office/KAEC_BIK/HTML/kaec-bik/assets/css/custom.css
@@ -126,14 +126,22 @@ textarea { min-height: 125px; resize: none; }
 
 .linktext:hover { color: #34436e; }
 
+/* color css */
+.blue-color{ color:#0a70ff; }
+
+.green-color{ color:#6fdc56; }
+
+
 /* infograph css */
-.letter-spacing-2 { letter-spacing: 2px; }
+.section-heading{ font-family: 'Bree Serif', serif; }
 
-.heading-xl { font-size: 43px; line-height: 47px; letter-spacing: 1px; padding: 0px; margin: 0px 0px 30px 0px; }
+.heading-xl { font-size: 60px; line-height: 23px; padding: 0px; margin: 0px 0px 15px 0px; }
 
-.heading-lg { font-size: 30px; line-height: 36px; letter-spacing: 1px; padding: 0px; margin: 0px 0px 30px 0px; }
+.heading-lg { font-size: 33px; line-height: 24px; padding: 0px; margin: 0px 0px 15px 0px; }
 
-.heading-md { font-size: 23px; line-height: 27px; letter-spacing: 1px; padding: 0px; margin: 0px 0px 20px 0px; }
+.heading-md { font-size: 25px; line-height: 34px; padding: 0px; margin: 0px 0px 15px 0px; }
+
+.heading-sm { font-size: 22px; line-height: 24px; padding: 0px; margin: 0px 0px 15px 0px; }
 
 
 
@@ -182,91 +190,88 @@ header .row.header-row{ align-items: center; }
 .search-filter-wrap-area{ display: flex; align-items: center; flex-wrap: nowrap; margin:0px -6px; padding:12px 0px; }
 
 .search-filter-col{ flex: 1; position: relative; min-height: 20px; margin:0px 6px; background: red; }
+
+.search-filter-section .select-styled{ padding:8px 15px 8px 45px; }
+
+.propertyType .select-styled{ background-image: url("../images/icons/property-type-icon.png"); background-position: 18px 8px; }
+
 /* search filter row section css ended */
 
 
+/* footer css start */
+footer{ padding: 20px 0px; background: #f3f3f3; position: relative; overflow: hidden; }
 
-.select-hidden {
-  /*display: none;
-  visibility: hidden;
-  padding-right: 10px;*/
-  
-  width:0px;
-  height:0px;
-  opacity: 1;
-}
+.footer-logo{ width:auto; max-width:145px; display: inline-block; }
 
-.select {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  font-size: 16px;
-  color: #fff;
-  width: 100%;
-  height: 40px;
-}
+.footer-logo a{ display: inline-block; }
 
-.select-styled {
-  position: absolute;
-  top: 0px;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #c0392b;
-  padding: 8px 15px;
-  -moz-transition: all 0.4s ease-in;
-  -o-transition: all 0.4s ease-in;
-  -webkit-transition: all 0.4s ease-in;
-  transition: all 0.4s ease-in;
-}
-.select-styled:after {
-  content: "";
-  width: 0;
-  height: 0;
-  border: 7px solid transparent;
-  border-color: #fff transparent transparent transparent;
-  position: absolute;
-  top: 16px;
-  right: 10px;
-}
-.select-styled:hover {
-  background-color: #b83729;
-}
-.select-styled:active, .select-styled.active {
-  background-color: #ab3326;
-}
-.select-styled:active:after, .select-styled.active:after {
-  top: 9px;
-  border-color: transparent transparent #fff transparent;
-}
+.footer-logo img{ width:100%; }
 
-.select-options {
-  display: none;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  left: 0;
-  z-index: 999;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  background-color: #ab3326;
-}
-.select-options li {
-  margin: 0;
-  padding: 12px 0;
-  text-indent: 15px;
-  border-top: 1px solid #962d22;
-  -moz-transition: all 0.15s ease-in;
-  -o-transition: all 0.15s ease-in;
-  -webkit-transition: all 0.15s ease-in;
-  transition: all 0.15s ease-in;
-}
-.select-options li:hover {
-  color: #c0392b;
-  background: #fff;
-}
-.select-options li[rel="hide"] {
-  display: none;
-}
+.footer-heading{ display:block; margin:0px 0px 10px 0px; font-size:18px; font-weight:800; color:#3f3e3e; }
+
+ul.footer-link{ width:100%; display: inline-block; margin:0px; padding:0px; }
+
+ul.footer-link li{ width:100%; display: inline-block; margin-bottom:6px; }
+
+ul.footer-link li:last-child{ margin:0px; }
+
+ul.footer-link li, ul.footer-link li a{ color:#3f3e3e; transition: all ease 0.4s; -webkit-transition: all ease 0.4s; }
+
+ul.footer-link li a:hover{ color:#0a70ff; }
+
+ul.footer-social *{ transition: all ease 0.4s; -webkit-transition: all ease 0.4s; }
+
+ul.footer-social{ width:auto; padding:25px 0px 0px 0px; margin:0px -3px; }
+
+ul.footer-social li{ display: inline-block; width:28px; height:28px; line-height: 28px; font-size: 16px; text-align: center; background: #717171; color:#fff; border-radius: 30px; overflow: hidden; margin:0px 3px; }
+
+ul.footer-social li a{ display: block; color:#fff; }
+
+ul.footer-social li.facebook:hover{ background: #1976d2; }
+
+ul.footer-social li.twitter:hover{ background: #03a9f4; }
+
+ul.footer-social li.instagram:hover{ background: #ff3997; }
+
+ul.footer-social li.youtube:hover{ background: #f44336; }
+
+.copyright{ width:100%; display: inline-block; text-align: center; padding: 18px 0px; color:#3f3e3e; }
+/* footer css ended */
+
+
+/* property detail page css start */
+.innerpage-with-tp-border{ width:100%; min-height:500px; display: inline-block; position: relative; padding:35px 0px; border-top:#e2e2e2 solid solid; background: #f4f4f4; }
+/* property detail page css ended */
+
+
+/* breadcrumb css start */
+.breadcrumb{ width:100%; display: inline-block; position: relative; background: transparent; padding: 0px; margin:0px 0px 32px 0px; }
+
+.breadcrumb ul{ padding: 0px; margin:0px; }
+
+.breadcrumb li{ display: inline-block; font-size:16px; position: relative; padding: 0px 20px 0px 0px; margin-right:12px; }
+
+.breadcrumb li, .breadcrumb li a{ color:#424141; }
+
+.breadcrumb li:after{ content: "\f105"; position: absolute; font: normal normal normal 14px/1 FontAwesome; right:0px; top:4px; font-weight:600;  }
+
+.breadcrumb li:hover a{ color:#0a70ff; }
+
+.breadcrumb li:last-child:after{ display: none; }
+
+.breadcrumb li:last-child a, .breadcrumb li:last-child span{ color:#47de89; font-weight:800; }
+/* breadcrumb css ended */
+
+
+/* common structure css start */
+.white-border-box{ width:100%; display: inline-block; position: relative; background: #fff; border:#dddddd solid 1px; }
+
+.white-border-padding{ padding: 24px; }
+/* common structure css ended */
+
+
+
+
+
+
 
